--- a/style/style.css
+++ b/style/style.css
@@ -103,8 +103,8 @@ textarea.form-control {
   font-weight: 300;
   height: 66px;
   letter-spacing: .05rem;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 0px;
+  padding-right: 0px;
   position: relative;
   z-index: 2;
   -webkit-appearance: none;
@@ -1692,7 +1692,7 @@ img {
     - Sections
 ----------------------------------------------------------------- */
 .container_md {
-  max-width: 900px;
+  max-width: 500px;
 }
 
 .section {
@@ -4284,7 +4284,7 @@ footer{
   text-align: left;
   font: bold 16px 'poppins',sans-serif;
 
-  padding: 50px 50px 0px 50px;
+  padding: 0px 0px 0px 50px;
   margin-top: 5px;
   margin-bottom: 0px;
 }
@@ -4297,7 +4297,7 @@ footer{
 }
 
 .footer-distributed .footer-left{
-  width: 40%;
+  width: 33%;
 }
  
 .footer-distributed h3{
@@ -4310,10 +4310,10 @@ footer{
   color:  #5383d3;
 }
 
-
+/*
 .footer-distributed .footer-links{
   color:  #ffffff;
-  margin: 20px 0 12px;
+  margin: 200px 0 12px;
   padding: 0;
 }
 
@@ -4330,10 +4330,9 @@ footer{
   font-weight: normal;
   margin: 0;
 }
-
-
+*/
 .footer-distributed .footer-center{
-  width: 35%;
+  width: 33.33%;
 }
 
 .footer-distributed .footer-center i{
@@ -4374,7 +4373,7 @@ footer{
 }
 
 .footer-distributed .footer-right{
-  width: 20%;
+  width: 33.33%;
 }
 
 .footer-distributed .footer-company-about{
