--- a/style/style.css
+++ b/style/style.css
@@ -721,7 +721,7 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   text-align: center;
 }
-.bloc-quote_center::before {
+.block-quote_center::before {
   background-image: ;
   background-repeat: no-repeat;
   background-position: center;
@@ -734,7 +734,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   width: 60px;
 }
-.bloc-quote_center::before {
+.block-quote_center::before {
   background-image: 
   background-repeat: no-repeat;
   background-position: center;
@@ -1039,25 +1039,7 @@ img {
   color: #fff;
   opacity: 1;
 }
-@media only screen and (max-width: 991px) {
-  .navbar-nav .nav-item a:hover {
-    background-color: #e62b1e;
-  }
-}
-.navbar-nav .nav-item a:hover::before {
-  width: 80%;
-}
-.navbar-nav .nav-item a::before {
-  content: '';
-  background-color: #e62b1e;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: -30%;
-  width: 0%;
-  z-index: -1;
-  transition: all 0.6s cubic-bezier(0.7, 0, 0.3, 1);
-}
+
 @media only screen and (max-width: 991px) {
   .navbar-nav .nav-item a::before {
     display: none;
